--- a/homeworks/HW02.ipynb
+++ b/homeworks/HW02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HW02 (due October 12th)"
+    "# HW02 (due October 10th, 23:59)"
    ]
   },
   {
@@ -25,16 +25,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "##Load the NLSY dataset\n",
     "import pandas as pd\n",
-    "import statsmodels.formula.api as smf\n",
+    "#import statsmodels.formula.api as smf\n",
     "import numpy as np\n",
     "\n",
     "data = pd.read_stata('https://www.stata-press.com/data/r16/nlswork.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'idcode': 'NLS ID',\n",
+       " 'year': 'interview year',\n",
+       " 'birth_yr': 'birth year',\n",
+       " 'age': 'age in current year',\n",
+       " 'race': 'race',\n",
+       " 'msp': '1 if married, spouse present',\n",
+       " 'nev_mar': '1 if never married',\n",
+       " 'grade': 'current grade completed',\n",
+       " 'collgrad': '1 if college graduate',\n",
+       " 'not_smsa': '1 if not SMSA',\n",
+       " 'c_city': '1 if central city',\n",
+       " 'south': '1 if south',\n",
+       " 'ind_code': 'industry of employment',\n",
+       " 'occ_code': 'occupation',\n",
+       " 'union': '1 if union',\n",
+       " 'wks_ue': 'weeks unemployed last year',\n",
+       " 'ttl_exp': 'total work experience',\n",
+       " 'tenure': 'job tenure, in years',\n",
+       " 'hours': 'usual hours worked',\n",
+       " 'wks_work': 'weeks worked last year',\n",
+       " 'ln_wage': 'ln(wage/GNP deflator)'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_stata('https://www.stata-press.com/data/r16/nlswork.dta', iterator=True).variable_labels()"
    ]
   },
   {
@@ -217,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
